--- a/main.html
+++ b/main.html
@@ -7,7 +7,18 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div>
+		<h1>What is the capital of India?</h1>
+		
+        <input type="radio" name="city" id="city" value="New Delhi" required>
+		<label for="">New Delhi</label><br>
+        <input type="radio" name="city" id="city" value="Mumbai" required>
+		<label for="">Mumbai</label><br>
+		<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+			New Delhi is the capital of India and an administrative district of NCT Delhi
+		</blockquote>
+		<!-- <p>New Delhi is the capital of India and an administrative district of NCT Delhi</p> -->
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
